--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: ecommerce_production
   username: ecommerce
   password: <%= ENV["ECOMMERCE_DATABASE_PASSWORD"] %>
